--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>MentorGuru</title>
+		<link rel="stylesheet" href="./Styles/styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
-	<body></body>
+	<body>
+		<div id="site_wrapper">
+			<header class="header">
+				<div class="inner-content">
+					<h1 class="content-title">
+						Get coaching to live your best life. No matter where you live it.
+					</h1>
+					<p class="content-para">
+						Match with the right life coach for your needs right now. Then,
+						you'll meet on our handy online platform for virtual sessions on a
+						schedule you choose. Click below for our free coaching assessment to
+						get started.
+					</p>
+					<button class="try">TRY IT FREE</button>
+					<p class="fine-print">Secure, no-obligation signup</p>
+				</div>
+				<div class="image-area">
+					<img src="./images/practice_image.png" alt="Mentor and Mentoree" />
+				</div>
+			</header>
+			<section class="the-why">
+				<h1>Hello</h1>
+				<h1>Hello</h1>
+				<h1>Hello</h1>
+				<h1>Hello</h1>
+			</section>
+		</div>
+	</body>
 </html>
